# py-fast-check

./: README.md  pyproject.toml
fast_check/: fast_check.py
